[package]
name = "ascii_artinator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = {version = "4.3", default-features = false, features = ["compress-gzip", "macros", "compress-brotli", "macros"]}
braille = "1.0"
image = "0.24"
reqwest = {version = "0.11", features = ["blocking"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
