[package]
name = "ascii_artinator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = {version = "4.3", default-features = false, features = ["compress-gzip", "macros", "compress-brotli", "macros"]}
braille = "1.0"
chrono = "0.4.23"
image = "0.24"
lazy_static = "1.4.0"
rand = "0.8.5"
reqwest = {version = "0.11", features = ["blocking"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
